# openpi

./: .gitignore  .gitmodules  REAME_cyn.md  evaluate.sh  inference.sh  pyproject.toml  set_envs.sh  test.py  train.sh
examples/: inference.ipynb
scripts/: compute_norm_stats.py  inference.py  train.py  train_pytorch.py
scripts/inference/: server.py
scripts/read_grasp_time/: add_hand_align_state.py  batch_plot_state_slice.py  plot_observation_state.py  plot_state_slice_edges.py  plot_state_trigger.py
scripts/test/: test_display_dataset.py  test_eval_dataset.py
src/: add_task_index.py  compute_episodes_stats.py  download_checkpoint.py  rename_lerobot_action_key_actions.py
src/check_dataset/: check_dataset.py
src/configs/: pi05_industrial_sorting_joint_20260112.yaml  pi05_industrial_sorting_joint_20260126.yaml  pi05_industrial_sorting_joint_20260130_last_frames_still.yaml  pi05_industrial_sorting_joint_20260227_last_frames_still_grasp_noise_chest_images.yaml  (+25 more)
src/inference/: server.py
src/lerobot_tools/: README.md  pyproject.toml
src/lerobot_tools/check_dataset/: check_dataset.py
src/lerobot_tools/check_dataset/check_list/: check_action_observation_consistency.py  check_compute_episodes_stats.py  check_dataset_info_consistency.py  check_delete_depth_info.py  check_delete_depth_jsondata.py  check_lerobot_video_frames.py  check_parquet_episode_index.py
src/lerobot_tools/modify_dataset/: dataset_video_deleter.py  expend_episodes_last_frames.py  merge_datasets.py  prune_episodes.py  rebuild_episodes_jsonl.py  reshape_video_images.py  update_task_prompt.py
(+134 files in other folders)
