[project]
name = "lerobot-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.20",
    "ffmpeg-python>=0.2.0",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "tqdm>=4.67.3",
]
